--- a/admin.html
+++ b/admin.html
@@ -1,213 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Panel</title>
-    <style>
-      :root {
-        --red: #ff4d4d;     /* Norman */
-        --blue: #4d79ff;    /* Roman */
-        --yellow: #ffd84d;  /* Viking */
-        --green: #4dff88;   /* Saxon */
-        --dark-bg: #1e1e2e;
-        --card-bg: #2a2a40;
-        --text-light: #f0f0f0;
-      }
+const express = require("express");
+const bodyParser = require("body-parser");
+const fs = require("fs");
+const cors = require("cors");
 
-      body {
-        margin: 0;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background: var(--dark-bg);
-        color: var(--text-light);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-        min-height: 100vh;
-      }
+const app = express();
+const PORT = process.env.PORT || 3000;
 
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 20px;
-        background: linear-gradient(
-          90deg,
-          var(--red),
-          var(--yellow),
-          var(--green),
-          var(--blue)
-        );
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
+// Middleware
+app.use(bodyParser.json());
+app.use(cors());
 
-      .login-box {
-        background: var(--card-bg);
-        padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5);
-        margin-top: 100px;
-      }
+// Path to store answers
+const ANSWERS_FILE = "./answers.json";
 
-      input[type="password"] {
-        padding: 10px;
-        border-radius: 8px;
-        border: none;
-        outline: none;
-        width: 200px;
-        margin-right: 10px;
-      }
+// Helper to read answers
+function readAnswers() {
+  if (!fs.existsSync(ANSWERS_FILE)) return [];
+  const data = fs.readFileSync(ANSWERS_FILE);
+  return JSON.parse(data);
+}
 
-      button {
-        padding: 8px 14px;
-        border-radius: 8px;
-        border: none;
-        background: linear-gradient(90deg, var(--red), var(--blue));
-        color: white;
-        cursor: pointer;
-        font-weight: 600;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-        transition: transform 0.2s ease;
-      }
-      button:hover {
-        transform: scale(1.05);
-      }
+// Helper to write answers
+function writeAnswers(answers) {
+  fs.writeFileSync(ANSWERS_FILE, JSON.stringify(answers, null, 2));
+}
 
-      .error {
-        color: var(--red);
-        margin-top: 10px;
-      }
+// Route to submit answer
+app.post("/submit", (req, res) => {
+  const { questionNumber, answer, ks, name, house } = req.body;
 
-      .result-card {
-        background: var(--card-bg);
-        border-radius: 12px;
-        padding: 16px;
-        margin: 12px 0;
-        width: 100%;
-        max-width: 800px;
-        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5);
-        border-left: 6px solid;
-        position: relative;
-      }
+  if (!questionNumber || !answer || !ks || !name || !house) {
+    return res.status(400).json({ message: "Missing data" });
+  }
 
-      .result-card.red { border-color: var(--red); }
-      .result-card.yellow { border-color: var(--yellow); }
-      .result-card.green { border-color: var(--green); }
-      .result-card.blue { border-color: var(--blue); }
+  const answers = readAnswers();
+  answers.push({
+    name,
+    house,
+    questionNumber,
+    answer,
+    ks,
+    timestamp: new Date(),
+  });
+  writeAnswers(answers);
 
-      .meta {
-        font-size: 0.9rem;
-        opacity: 0.8;
-        margin-bottom: 8px;
-      }
+  res.json({ message: "Answer submitted successfully" });
+});
 
-      .answers {
-        font-family: monospace;
-        background: rgba(255, 255, 255, 0.05);
-        padding: 8px;
-        border-radius: 8px;
-        overflow-x: auto;
-      }
+// Route to get all answers (admin only)
+app.get("/answers", (req, res) => {
+  const answers = readAnswers();
+  res.json(answers);
+});
 
-      .delete-btn {
-        position: absolute;
-        top: 12px;
-        right: 12px;
-        background: var(--red);
-        color: white;
-        border: none;
-        padding: 6px 10px;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 0.8rem;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Admin Panel</h1>
+// Route to delete an answer by index
+app.delete("/delete/:index", (req, res) => {
+  const index = parseInt(req.params.index);
+  let answers = readAnswers();
 
-    <!-- Login box -->
-    <div id="login" class="login-box">
-      <p>Enter admin password:</p>
-      <input type="password" id="adminPassword" placeholder="Password" />
-      <button onclick="checkPassword()">Login</button>
-      <div id="loginError" class="error"></div>
-    </div>
+  if (index < 0 || index >= answers.length) {
+    return res.status(400).json({ message: "Invalid index" });
+  }
 
-    <!-- Results -->
-    <div id="results" style="display: none; margin-top: 20px">Loading...</div>
+  answers.splice(index, 1); // remove answer
+  writeAnswers(answers);
 
-    <script>
-      const ADMIN_PASS = "admin123";
-      const DELETE_PASS = "delete456";
+  res.json({ message: "Answer deleted successfully" });
+});
 
-      function checkPassword() {
-        const input = document.getElementById("adminPassword").value.trim();
-        const errorBox = document.getElementById("loginError");
-        if (input === ADMIN_PASS) {
-          document.getElementById("login").style.display = "none";
-          document.getElementById("results").style.display = "block";
-          loadResults();
-          setInterval(loadResults, 5000);
-        } else {
-          errorBox.textContent = "Incorrect password.";
-        }
-      }
-
-      async function loadResults() {
-        try {
-          const res = await fetch("https://quiz-backend-q4me.onrender.com/answers");
-          const data = await res.json();
-
-          const resultsDiv = document.getElementById("results");
-          resultsDiv.innerHTML = "";
-
-          if (data.length === 0) {
-            resultsDiv.textContent = "No submissions yet.";
-            return;
-          }
-
-          data.forEach((item, index) => {
-            const card = document.createElement("div");
-            card.className = "result-card";
-
-            // Color by House
-            if (item.house === "Norman") card.classList.add("red");
-            if (item.house === "Viking") card.classList.add("yellow");
-            if (item.house === "Saxon") card.classList.add("green");
-            if (item.house === "Roman") card.classList.add("blue");
-
-            card.innerHTML = `
-              <div class="meta">#${index + 1} • <strong>${item.house}</strong> • ${new Date(item.timestamp).toLocaleString()}</div>
-              <div class="answers">👤 ${item.name || "Unknown"} <br> Q${item.questionNumber}: ${item.answer}</div>
-              <button class="delete-btn" onclick="deleteResult(${index})">Delete</button>
-            `;
-            resultsDiv.appendChild(card);
-          });
-        } catch (err) {
-          document.getElementById("results").textContent =
-            "Error loading results.";
-        }
-      }
-
-      async function deleteResult(index) {
-        const pass = prompt("Enter delete password:");
-        if (pass !== DELETE_PASS) {
-          alert("Wrong delete password!");
-          return;
-        }
-
-        const res = await fetch(`https://quiz-backend-q4me.onrender.com/delete/${index}`, {
-          method: "DELETE"
-        });
-
-        if (res.ok) {
-          alert("Result deleted!");
-          loadResults();
-        } else {
-          alert("Failed to delete result.");
-        }
-      }
-    </script>
-  </body>
-</html>
+// Start server
+app.listen(PORT, () => {
+  console.log(`Server running on port ${PORT}`);
+});
