--- a/admin.html
+++ b/admin.html
@@ -1,74 +1,230 @@
-const express = require("express");
-const bodyParser = require("body-parser");
-const fs = require("fs");
-const cors = require("cors");
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Panel</title>
+    <style>
+      :root {
+        --red: #ff4d4d;
+        --blue: #4d79ff;
+        --yellow: #ffd84d;
+        --green: #4dff88;
+        --dark-bg: #1e1e2e;
+        --card-bg: #2a2a40;
+        --text-light: #f0f0f0;
+      }
 
-const app = express();
-const PORT = process.env.PORT || 3000;
+      body {
+        margin: 0;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background: var(--dark-bg);
+        color: var(--text-light);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+        min-height: 100vh;
+      }
 
-// Middleware
-app.use(bodyParser.json());
-app.use(cors());
+      h1 {
+        font-size: 2rem;
+        margin-bottom: 20px;
+        background: linear-gradient(
+          90deg,
+          var(--red),
+          var(--blue),
+          var(--yellow),
+          var(--green)
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
 
-// Path to store answers
-const ANSWERS_FILE = "./answers.json";
+      .login-box {
+        background: var(--card-bg);
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5);
+        margin-top: 100px;
+      }
 
-// Helper to read answers
-function readAnswers() {
-  if (!fs.existsSync(ANSWERS_FILE)) return [];
-  const data = fs.readFileSync(ANSWERS_FILE);
-  return JSON.parse(data);
-}
+      input[type="password"] {
+        padding: 10px;
+        border-radius: 8px;
+        border: none;
+        outline: none;
+        width: 200px;
+        margin-right: 10px;
+      }
 
-// Helper to write answers
-function writeAnswers(answers) {
-  fs.writeFileSync(ANSWERS_FILE, JSON.stringify(answers, null, 2));
-}
+      button {
+        padding: 8px 14px;
+        border-radius: 8px;
+        border: none;
+        background: linear-gradient(90deg, var(--red), var(--blue));
+        color: white;
+        cursor: pointer;
+        font-weight: 600;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+        transition: transform 0.2s ease;
+      }
+      button:hover {
+        transform: scale(1.05);
+      }
 
-// Route to submit answer
-app.post("/submit", (req, res) => {
-  const { questionNumber, answer, ks, name, house } = req.body;
+      .error {
+        color: var(--red);
+        margin-top: 10px;
+      }
 
-  if (!questionNumber || !answer || !ks || !name || !house) {
-    return res.status(400).json({ message: "Missing data" });
-  }
+      .result-card {
+        background: var(--card-bg);
+        border-radius: 12px;
+        padding: 16px;
+        margin: 12px 0;
+        width: 100%;
+        max-width: 800px;
+        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5);
+        border-left: 6px solid;
+        position: relative;
+      }
 
-  const answers = readAnswers();
-  answers.push({
-    name,
-    house,
-    questionNumber,
-    answer,
-    ks,
-    timestamp: new Date(),
-  });
-  writeAnswers(answers);
+      .result-card.red {
+        border-color: var(--red);
+      }
+      .result-card.blue {
+        border-color: var(--blue);
+      }
+      .result-card.yellow {
+        border-color: var(--yellow);
+      }
+      .result-card.green {
+        border-color: var(--green);
+      }
 
-  res.json({ message: "Answer submitted successfully" });
-});
+      .meta {
+        font-size: 0.9rem;
+        opacity: 0.8;
+        margin-bottom: 8px;
+      }
 
-// Route to get all answers (admin only)
-app.get("/answers", (req, res) => {
-  const answers = readAnswers();
-  res.json(answers);
-});
+      .answers {
+        font-family: monospace;
+        background: rgba(255, 255, 255, 0.05);
+        padding: 8px;
+        border-radius: 8px;
+        overflow-x: auto;
+      }
 
-// Route to delete an answer by index
-app.delete("/delete/:index", (req, res) => {
-  const index = parseInt(req.params.index);
-  let answers = readAnswers();
+      .delete-btn {
+        position: absolute;
+        top: 12px;
+        right: 12px;
+        background: var(--red);
+        color: white;
+        border: none;
+        padding: 6px 10px;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 0.8rem;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Admin Panel</h1>
 
-  if (index < 0 || index >= answers.length) {
-    return res.status(400).json({ message: "Invalid index" });
-  }
+    <!-- Login box -->
+    <div id="login" class="login-box">
+      <p>Enter admin password:</p>
+      <input type="password" id="adminPassword" placeholder="Password" />
+      <button onclick="checkPassword()">Login</button>
+      <div id="loginError" class="error"></div>
+    </div>
 
-  answers.splice(index, 1); // remove answer
-  writeAnswers(answers);
+    <!-- Results -->
+    <div id="results" style="display: none; margin-top: 20px">Loading...</div>
 
-  res.json({ message: "Answer deleted successfully" });
-});
+    <script>
+      const ADMIN_PASS = "admin123";
+      const DELETE_PASS = "delete456";
 
-// Start server
-app.listen(PORT, () => {
-  console.log(`Server running on port ${PORT}`);
-});
+      function checkPassword() {
+        const input = document.getElementById("adminPassword").value.trim();
+        const errorBox = document.getElementById("loginError");
+        if (input === ADMIN_PASS) {
+          document.getElementById("login").style.display = "none";
+          document.getElementById("results").style.display = "block";
+          loadResults();
+          setInterval(loadResults, 5000);
+        } else {
+          errorBox.textContent = "Incorrect password.";
+        }
+      }
+
+      async function loadResults() {
+        try {
+          const res = await fetch(
+            "https://quiz-backend-q4me.onrender.com/answers"
+          );
+          const data = await res.json();
+
+          const resultsDiv = document.getElementById("results");
+          resultsDiv.innerHTML = "";
+
+          if (data.length === 0) {
+            resultsDiv.textContent = "No submissions yet.";
+            return;
+          }
+
+          data.forEach((item, index) => {
+            const card = document.createElement("div");
+            card.className = "result-card";
+
+            // Assign theme color by house
+            if (item.house === "Norman") card.classList.add("red");
+            if (item.house === "Viking") card.classList.add("yellow");
+            if (item.house === "Saxon") card.classList.add("green");
+            if (item.house === "Roman") card.classList.add("blue");
+
+            card.innerHTML = `
+              <div class="meta">
+                #${index + 1} • <strong>${item.name}</strong> • ${
+              item.house
+            } • ${new Date(item.timestamp).toLocaleString()}
+              </div>
+              <div class="answers">Q${item.questionNumber}: ${item.answer}</div>
+              <button class="delete-btn" onclick="deleteResult(${index})">Delete</button>
+            `;
+            resultsDiv.appendChild(card);
+          });
+        } catch (err) {
+          document.getElementById("results").textContent =
+            "Error loading results.";
+        }
+      }
+
+      async function deleteResult(index) {
+        const pass = prompt("Enter delete password:");
+        if (pass !== DELETE_PASS) {
+          alert("Wrong delete password!");
+          return;
+        }
+
+        const res = await fetch(
+          `https://quiz-backend-q4me.onrender.com/delete/${index}`,
+          {
+            method: "DELETE",
+          }
+        );
+
+        if (res.ok) {
+          alert("Result deleted!");
+          loadResults();
+        } else {
+          alert("Failed to delete result.");
+        }
+      }
+    </script>
+  </body>
+</html>
