--- a/nks3.html
+++ b/nks3.html
@@ -57,9 +57,9 @@
   <body>
     <div class="card">
       <h1>Norman KS3 Questions</h1>
-      <p>Enter password to unlock:</p>
+      <p id = "hide">Enter password to unlock:</p>
       <input type="password" id="passwordInput" placeholder="Password" />
-      <button onclick="checkPassword()">Submit</button>
+      <button onclick="checkPassword()" id = "hided">Submit</button>
       <p id="error" style="color: #ff7b7b"></p>
 
       <div id="questions" class="hidden">
@@ -67,31 +67,21 @@
         <input type="text" id="studentName" placeholder="Your Name" />
 
         <div class="question">
-          <p><b>Q1:</b> 1+1</p>
+          <p><b>Q1:</b> <img src = "https://hive.forms.usercontent.microsoft/images/7fc9707b-9d8f-4f6a-856b-aeb848fef103/cf84f779-1549-46c7-b9fc-41a605f4a2bd/TALXNWO3UW4B9DA8MD9NV8Y8EF/71e66a4f-4470-4494-ae08-31eefafcbebe"></p>
           <input
             type="text"
             id="q1"
-            placeholder="Type both roots e.g. 1,-0.9"
+            placeholder="Type in the answer here!"
           />
           <button onclick="checkAnswer(1)">Submit Q1</button>
         </div>
 
         <div class="question">
           <p>
-            <b>Q2:</b> A solid has surface area 94 cm² and volume 120 cm³. What
-            is its height if it's a cuboid with square base?
+            <b>Q2:</b> <img src = "https://hive.forms.usercontent.microsoft/images/7fc9707b-9d8f-4f6a-856b-aeb848fef103/cf84f779-1549-46c7-b9fc-41a605f4a2bd/TALXNWO3UW4B9DA8MD9NV8Y8EF/5d0dab19-fd0e-45ad-9bb2-af1ff9c4c772">
           </p>
-          <input type="number" id="q2" placeholder="Answer (number)" />
+          <input type="number" id="q2" placeholder="Type in the answer here!" />
           <button onclick="checkAnswer(2)">Submit Q2</button>
-        </div>
-
-        <div class="question">
-          <p>
-            <b>Q3:</b> The nth term of a sequence is an² + bn. The 5th term is
-            100, the 7th is 182. Find a+b.
-          </p>
-          <input type="number" id="q3" placeholder="Answer (number)" />
-          <button onclick="checkAnswer(3)">Submit Q3</button>
         </div>
       </div>
     </div>
@@ -99,16 +89,22 @@
     <script>
       const correctPassword = "nks3bskl";
       const correctAnswers = {
-        1: ["2"],
-        2: "5",
-        3: "6",
+        1: "?",
+        2: "?",
       };
 
       function checkPassword() {
         const input = document.getElementById("passwordInput").value.trim();
         const error = document.getElementById("error");
+        const hide = document.getElementById("hide");
+        const hided = document.getElementById("hided")
         if (input === correctPassword) {
           document.getElementById("questions").classList.remove("hidden");
+          const element = document.getElementById('hide');
+          element.style.display = 'none';
+          const hi = document.getElementById('hided');
+          hi.style.display = 'none';
+
           document.getElementById("passwordInput").style.display = "none";
           error.textContent = "";
         } else {
