--- a/vks3.html
+++ b/vks3.html
@@ -100,10 +100,10 @@
     </div>
 
     <script>
-      const correctPassword = "vks3bskl"; // 🔑 Viking password
+      const correctPassword = "vks3bskl"; 
       const correctAnswers = {
-        1: "114",
-        2: "?",
+        1: ["114", "387", "750"],,
+        2: "4",
       };
 
       function checkPassword() {
@@ -162,4 +162,5 @@
     </script>
   </body>
 </html>
+
 
