--- a/rks4.html
+++ b/rks4.html
@@ -81,7 +81,7 @@
 
         <div class="question">
           <p><b>Q1:</b></p>
-          <input type="text" id="q1" placeholder="Type in the answer here! (Input note: type in answer in the format of (a,b;c)" />
+          <input type="text" id="q1" placeholder="Type in the answer here! (Input note: type in answer in the format of (a;b), write it in decimal form." />
           <button onclick="checkAnswer(1)">Submit Q1</button>
         </div>
 
@@ -96,7 +96,7 @@
     <script>
       const correctPassword = "rks4bskl"; // 🔑 Roman password
       const correctAnswers = {
-        1: "(2,4;12)",
+        1: "(2.4;12)",
         2: "21",
       };
 
@@ -156,4 +156,5 @@
     </script>
   </body>
 </html>
+
 
