--- a/nks5.html
+++ b/nks5.html
@@ -8,7 +8,7 @@
       body {
         font-family: Arial, sans-serif;
         background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-          url("https://upload.wikimedia.org/wikipedia/commons/6/6d/Norman_castle_wall.jpg")
+          url("https://lh3.googleusercontent.com/pw/AP1GczNEQikXcmZ4wBcACO0uYogHm0dv-7BsXHXRbg-q3q-cy4GshZ_P84FTgCQ2FdzWM87kDOWvqZxuEbLz5Kt8F3Sj0fEtBZg8dWSNjnoMchfNBKXMPTtA21-88KbXbLSnrjz7iHjYy0XAC23Jkg1FbWs=w1974-h1106-s-no-gm?authuser=0")
             no-repeat center center fixed;
         background-size: cover;
         color: white;
@@ -81,12 +81,18 @@
 
         <div class="question">
           <p><b>Q1:</b></p>
+          <img
+            src="https://hive.forms.usercontent.microsoft/images/7fc9707b-9d8f-4f6a-856b-aeb848fef103/cf84f779-1549-46c7-b9fc-41a605f4a2bd/TB4MQY37O8JIDOEJGFYCENR3WI/2bfb54dd-660c-48d4-9cca-191f0ce22b18"
+          />
           <input type="text" id="q1" placeholder="Type in the answer here!" />
           <button onclick="checkAnswer(1)">Submit Q1</button>
         </div>
 
-        <div class="question">
+         <div class="question">
           <p><b>Q2:</b></p>
+          <img
+            src="https://hive.forms.usercontent.microsoft/images/7fc9707b-9d8f-4f6a-856b-aeb848fef103/cf84f779-1549-46c7-b9fc-41a605f4a2bd/TB4MQY37O8JIDOEJGFYCENR3WI/a6c23e4f-eb53-407f-ae2d-15cb72e295be"
+          />
           <input type="number" id="q2" placeholder="Type in the answer here!" />
           <button onclick="checkAnswer(2)">Submit Q2</button>
         </div>
@@ -95,7 +101,10 @@
 
     <script>
       const correctPassword = "nks5bskl"; // 🔑 Norman password
-      const correctAnswers = { 1: "?", 2: "?" };
+      const correctAnswers = {
+        1: "19",
+        2: "57",
+      };
 
       function checkPassword() {
         const input = document.getElementById("passwordInput").value.trim();
@@ -148,3 +157,4 @@
     </script>
   </body>
 </html>
+
