--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Math House Competition</title>
+    <title>Maths House Competition</title>
     <style>
       body {
         margin: 0;
@@ -123,7 +123,7 @@
   <body>
     <div class="main-content">
       <div class="hero">
-        <h1>BSKL Math House Competition 2025-2026</h1>
+        <h1>BSKL Maths House Competition 2025-2026</h1>
         <a href="house.html" class="glow-button">Start</a>
       </div>
 
